--- a/FrontendCollaboration/WebContent/views/Login.html
+++ b/FrontendCollaboration/WebContent/views/Login.html
@@ -1,2 +1,61 @@
-<b>This is Login</b><br>
-Data for login is :{{dataForLogin}}
+<html>
+
+
+<head>
+   <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <link href="assets/mycss/Registration.css" rel="stylesheet">
+  
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+ <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+ 
+    <script src="js/bootstrap.min.js"></script>
+  
+	<link href='https://fonts.googleapis.com/css?family=Passion+One' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
+</head>
+
+<body>
+
+
+<div class="container">
+			<div class="row main">
+				<div class="panel-heading">
+	               <div class="panel-title text-center">
+	               		<h2 class="title">User Login</h2>
+	               		<hr />
+	               	</div>
+	            </div> 
+				<div class="main-login main-center">
+	
+	
+				
+<span style="color:red">{{error}}</span>
+
+<form>
+<div class="form-group">
+Enter Username:
+<div class="input-group">
+<span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
+<input type="text" ng-model="userObj.username" placeholder="Enter Your Username" class="form-control">
+</div><span style='color:red'>{{error.message}}</span>
+</div>
+
+<div class="form-group">
+Enter Password:
+<div class="input-group">
+<span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
+<input type="password" ng-model="userObj.password" placeholder="Enter Your Password" class="form-control">
+</div><span style='color:red'>{{error.message}}</span>
+</div>
+
+<input type="submit" class="btn btn-primary btn-lg btn-block login-button" ng-click="login()">
+
+</form>
+
+</div></div></div>
+
+</body>
+</html>
