--- a/FrontendCollaboration/WebContent/views/Registration.html
+++ b/FrontendCollaboration/WebContent/views/Registration.html
@@ -1,5 +1,5 @@
 <html>
-<body>
+
 
 <head>
    <meta name="viewport" content="width=device-width, initial-scale=1"/>
@@ -17,6 +17,7 @@
 	<link href='https://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
 </head>
 
+<body>
 
 <div class="container">
 			<div class="row main">
@@ -30,15 +31,17 @@
 
 
 
+<span style="color:red" ng-if="error.code==1">{{error}}</span>
 
-
+<form>
 <div class="form-group">
 Enter Username:
 <div class="input-group">
 <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
 <input type="text" ng-model="user.username" placeholder="Enter Your Username" class="form-control">
 
-</div></div>
+</div><span style='color:red' ng-if="error.code==2">{{error.message}}</span>
+</div>
 
 <div class="form-group">
 Enter Password:
@@ -66,7 +69,8 @@ Enter Email:
 <div class="input-group">
 <span class="input-group-addon"><i class="fa fa-envelope fa" aria-hidden="true"></i></span>
 <input type="email" ng-model="user.email" placeholder="Enter Your Email" class="form-control">
-</div></div>
+</div> <span style='color:red' ng-if="error.code==3">{{error.message}}</span>
+</div>
 <div class="form-group">
 Enter PhoneNumber:
 <div class="input-group">
