--- a/FrontendCollaboration/WebContent/views/Login.html
+++ b/FrontendCollaboration/WebContent/views/Login.html
@@ -32,7 +32,7 @@
 	
 	
 				
-<span style="color:red">{{error}}</span>
+<span style="color:red">{{error.message}}</span>
 
 <form>
 <div class="form-group">
