--- a/FrontendCollaboration/WebContent/views/Login.html
+++ b/FrontendCollaboration/WebContent/views/Login.html
@@ -1,4 +1,4 @@
-<html>
+<!-- <html>
 
 
 <head>
@@ -17,7 +17,7 @@
 	<link href='https://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
 </head>
 
-<body>
+<body> -->
 
 
 <div class="container">
@@ -32,7 +32,7 @@
 	
 	
 				
-<span style="color:red">{{error.message}}</span>
+<span style="color:red">{{error}}</span>
 
 <form>
 <div class="form-group">
@@ -57,5 +57,5 @@ Enter Password:
 
 </div></div></div>
 
-</body>
-</html>
+<!-- </body>
+</html> -->
