--- a/FrontendCollaboration/WebContent/views/Home.html
+++ b/FrontendCollaboration/WebContent/views/Home.html
@@ -1,14 +1,27 @@
 
 
-<h2 align="center">
-Home Page
-
-Message From Controller : {{message}}
-
-</h2>
+<html>
 
 
+<head>
+   <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <link href="assets/mycss/Registration.css" rel="stylesheet">
+  
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+ <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+ 
+    <script src="js/bootstrap.min.js"></script>
+  
+	<link href='https://fonts.googleapis.com/css?family=Passion+One' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
+</head>
 
+<body>
 
-<!-- <b>This is Login</b><br>
-Data for login is :{{dataForLogin}} -->
+<p>HOME PAGE</p>
+
+</body>
+</html>
