--- a/FrontendCollaboration/WebContent/assets/mycss/Registration.css
+++ b/FrontendCollaboration/WebContent/assets/mycss/Registration.css
@@ -17,9 +17,9 @@ body, html{
  	background-repeat: no-repeat;
  	
  	/* background-color: #fff; */
- 	/*  background:url(http://images.all-free-download.com/images/graphiclarge/pebble_beach_and_sea_190508.jpg); */ 
+ 	  background:url(http://images.all-free-download.com/images/graphiclarge/pebble_beach_and_sea_190508.jpg); 
 
- background:url(http://reikiusui.info/wp-content/uploads/2015/12/unique-light-wood-background-with-light-wood-grain-background-24.jpg);
+/* background:url(http://reikiusui.info/wp-content/uploads/2015/12/unique-light-wood-background-with-light-wood-grain-background-24.jpg);
 /*  background:url(http://hdimages.org/wp-content/uploads/2016/11/background-image-html-HD2.jpg); */
 
  	font-family: 'Oxygen', sans-serif;
