--- a/FrontendCollaboration/WebContent/views/EditProfile.html
+++ b/FrontendCollaboration/WebContent/views/EditProfile.html
@@ -23,7 +23,7 @@
 			<div class="row main">
 				<div class="panel-heading">
 	               <div class="panel-title text-center">
-	               		<h2 class="title">User Details</h2>
+	               		<h2 class="title">Edit User Profile</h2>
 	               		<hr />
 	               	</div>
 	            </div> 
@@ -85,7 +85,7 @@ Enter PhoneNumber:
 <input type="radio" ng-model="user.role" value="ADMIN">Admin
 </div>
 
-<input type="submit" class="btn btn-primary btn-lg btn-block login-button" value="Edit" ng-click="updateUser()">
+<input type="submit" class="btn btn-primary btn-lg btn-block login-button" value="Edit Profile" ng-click="updateUser()">
 
 </form>
 
