--- a/FrontendCollaboration/WebContent/views/Login.html
+++ b/FrontendCollaboration/WebContent/views/Login.html
@@ -47,7 +47,13 @@ Enter Username:
 Enter Password:
 <div class="input-group">
 <span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
-<input type="password" ng-model="userObj.password" placeholder="Enter Your Password" class="form-control">
+<!-- <div class="input-group">
+<span class="input-group-addon"><i class="fa fa-eye " aria-hidden="true"></i></span>
+<input type="checkbox" ng-model="userObj.password"/>show -->
+<input type="password" ng-model="userObj.password"  placeholder="Enter Your Password" class="form-control">
+<p ng-password="userObj.password"></p>
+
+
 </div><span style='color:red'>{{error.message}}</span>
 </div>
 
