--- a/FrontendCollaboration/WebContent/views/blogApproval.html
+++ b/FrontendCollaboration/WebContent/views/blogApproval.html
@@ -6,7 +6,7 @@
 <span><strong>Created By:</strong>{{blogPost.postedBy.username}}</span>
 <span><strong>on: </strong>{{blogPost.PostedOn | date: 'MM/dd/yyyy HH:mm'}}</span>
 
-</div>
+</div><hr>
 <div class="panel-body">{{blogPost.blogContent}}</div>
 
 </div>
@@ -20,6 +20,7 @@
 <input type="radio" ng-model="blogPost.approved" value="true" ng-click="showRejectionTxt(false)">Approve
 <input type="radio" ng-model="blogPost.approved" value="false" ng-click="showRejectionTxt(true)">Reject<br>
 <p ng-show="isRejected">
+Enter Rejection Reason
 <textarea rows="5" cols="20" ng-model="blogPost.rejectionReason" class="form-controller"></textarea>
 </div>
 <input type="submit" value="update" ng-click="updateBlogPost()">
