--- a/FrontendCollaboration/WebContent/views/blogDetails.html
+++ b/FrontendCollaboration/WebContent/views/blogDetails.html
@@ -2,11 +2,12 @@
 <div>
 <div class="panel panel-default">
 <div class="pannel-heading">
-<div>{{blogPost.blogTitle}}</div>
-<span><strong>Created By:</strong>{{blogPost.postedBy.username}}</span>
-<span><strong>on: </strong>{{blogPost.PostedOn | date:'MM/dd/yyyy HH:mm'}}</span>
+<div>{{blogPost. blogTitle}}</div>
+<span><strong>  Created By:</strong>{{blogPost.postedBy.username}}</span>
+<span><strong> on: </strong>{{blogPost.postedOn | date : 'MM/dd/yyyy HH:mm'}}</span>
 
 </div>
+<hr>
 <div class="panel-body">{{blogPost.blogContent}}</div>
 
 </div>
@@ -14,4 +15,16 @@
 </div>
 
 
-<b>TextArea for posting comments</b>
+{{blogPost.likes}} likes
+<a><span class="glyphicon glyphicon-thumbs-up" ng-class="isLiked?'liked':'default' " ng-click="updateLikes()"></span></a>
+
+<br><br>
+<form>
+<div class="form-group">
+<b>Enter Blog Comments</b>
+<br>
+<textarea rows="5" cols="20" placeholder="Write a comment" class="form-controller"></textarea>
+
+</div>
+<input type="submit" value="Post" ng-click="blogComment()"> 
+</form>
