add job is completed

--- a/FrontendCollaboration/WebContent/views/blogDetails.html
+++ b/FrontendCollaboration/WebContent/views/blogDetails.html
@@ -1,3 +1,7 @@
+<div>
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
+	 <link href="assets/mycss/blogpost.css" rel="stylesheet">
+
 <div class="row">
 <div>
 <div class="panel panel-default">
@@ -35,4 +39,5 @@
 
 
 <button class="btn btn-primary" value="Post Comment" ng-click="addComment()">Post Comment</button> 
+</div>
 </div>
