jobDetail is completed

--- a/FrontendCollaboration/WebContent/views/jobform.html
+++ b/FrontendCollaboration/WebContent/views/jobform.html
@@ -78,9 +78,25 @@ List of All Jobs
 </thead>
 <tbody>
 <tr ng-repeat="job in jobs">
-<td><a>{{job.jobTitle}}</a></td>
+<td><a href="" ng-click="getJobDetails(job.id)">{{job.jobTitle}}</a></td>
 <td>{{job.postedOn | date: 'medium'}}</td>
 <td>{{job.skillsRequired}}</td>
 </tr>
 </tbody>
 </table>
+
+<div ng-show="showJobDetails">
+
+Job Details
+
+<pre>
+Job Title:{{job.jobTitle}}
+job Description:{{job.jobDescription}}
+job Skills Required:{{job.skillsRequired}}
+job Salary:{{job.salary}}
+job Location{{job.location}}
+job Company Name{{job.companyname}}
+job Posted On Date:{{job.postedOn}}
+
+</pre>
+</div>
