--- a/FrontendCollaboration/WebContent/views/ProfilePicDemo.html
+++ b/FrontendCollaboration/WebContent/views/ProfilePicDemo.html
@@ -1,7 +1,11 @@
 <html>
 <head>
- <link href="assets/mycss/profile.css" rel="stylesheet">
-  <link href="assets/mycss/profile.js" rel="stylesheet">
+<link href="assets/css/fileinput.css" media="all" rel="stylesheet" type="text/css"/>
+    
+    <link href="assets/themes/explorer/theme.css" media="all" rel="stylesheet" type="text/css"/>
+   
+    <script src="assets/js/fileinput.js" type="text/javascript"></script>
+    <script src="assets/themes/explorer/theme.js" type="text/javascript"></script>
   
    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
   <link rel="stylesheet" href="style.css">
@@ -22,7 +26,9 @@
 <div>
  
 <input type="file" name="image" class="file" data-upload-url="http://localhost:8084/RestController/uploadprofilepic"
- data-preview-file-type="any">
+ data-preview-file-type="any"> 
+ <input type="submit" class="btn btn-sm btn-primary" >Upload files</button>
+ 
 </div></div>
 
 
