--- a/FrontendCollaboration/WebContent/views/ProfilePic.html
+++ b/FrontendCollaboration/WebContent/views/ProfilePic.html
@@ -1,45 +1,45 @@
+<!DOCTYPE html>
+   
 <html>
 <head>
+<meta charset="ISO-8859-1">
+
+ <link href="assets/mycss/profile.css" rel="stylesheet">
+  <link href="assets/mycss/profile.js" rel="stylesheet">
+
+
+ <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+ <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" type="text/javascript"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+     <script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
+     
+     
 <link href="assets/css/fileinput.css" media="all" rel="stylesheet" type="text/css"/>
-    
     <link href="assets/themes/explorer/theme.css" media="all" rel="stylesheet" type="text/css"/>
-   
-    <script src="assets/js/fileinput.js" type="text/javascript"></script>
+     <script src="assets/js/fileinput.js" type="text/javascript"></script>
     <script src="assets/themes/explorer/theme.js" type="text/javascript"></script>
-  
-   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
- 
-    <script src="js/bootstrap.min.js"></script> 
-  
+    
+    
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+
+<link	href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css"	rel="stylesheet" />
   
   
 </head>
+
+
+<title>Insert title here</title>
+</head>
 <body>
 
-
-
-<div class="container">
-<div>
- 
-<input type="file" name="image" class="file" data-upload-url="http://localhost:8084/RestController/uploadprofilepic"
- data-preview-file-type="any"> 
- <input type="submit" class="btn btn-sm btn-primary" >Upload files</button>
- 
-</div></div>
-
-
-
-
-
-
-
-
-
-
+<div class="container kv-main">
+           <div class="form-group">
+            <input class="file" type="file" 
+            name="image"
+            data-preview-file-type="any" 
+            data-upload-url="http://localhost:8084/RestController/uploadprofilepic">
+        </div>
+        </div>
 
 
 
