search job and get profile pic are completed.....

--- a/FrontendCollaboration/WebContent/views/joblist.html
+++ b/FrontendCollaboration/WebContent/views/joblist.html
@@ -1,3 +1,5 @@
+<center><input type="text" ng-model="searchTxt"><span class="glyphicon glyphicon-search"></span>Search Jobs</center>
+<br><hr>
 <table class="table table-striped">
 <thead>
 <tr>
@@ -7,7 +9,7 @@
 </tr>
 </thead>
 <tbody>
-<tr ng-repeat="job in jobs">
+<tr ng-repeat="job in jobs | filter:searchTxt">
 <td><a href="" ng-click="getJobDetails(job.id)">{{job.jobTitle}}</a></td>
 <td>{{job.postedOn | date: 'medium'}}</td>
 <td>{{job.skillsRequired}}</td>
