completed Friends list....

--- a/FrontendCollaboration/WebContent/views/SuggestedFriendList.html
+++ b/FrontendCollaboration/WebContent/views/SuggestedFriendList.html
@@ -1,3 +1,4 @@
+<span ng-if="suggestedUsers.length==0"><b>No Any Suggestion Request</b></span>
 <table class="table table-striped">
 <tbody>
 <tr ng-repeat="user in suggestedUsers">
