--- a/FrontendCollaboration/WebContent/views/PendingFriendRequest.html
+++ b/FrontendCollaboration/WebContent/views/PendingFriendRequest.html
@@ -1,11 +1,19 @@
 <div>
+<span ng-if="pendingRequests.length==0"><b>No Pending Request</b></span>
 <table class="table table-striped">
 <tbody>
 <tr ng-repeat="request in pendingRequests">
 <td>{{request.fromId}}</td>
 <td><img alt="image not available" src="http://localhost:8084/RestController/getimage/{{request.fromId}}" 
               height="40px" width="40px"">
+              
+<!-- request.status=P -->
+<!-- id fromId toId status -->          
+<!-- 422 john admin P -->
+<!-- 425 jack admin P -->    
 <td><a class="btn btn-primary" ng-click="updatePendingRequest(request, 'A')">Accept Friend Request</a></td>
+
+<!-- request.status=P -->
 <td><a class="btn btn-warning" ng-click="updatePendingRequest(request, 'D')">Delete Friend Request</a></td>
 </tr>
 </tbody>
