--- a/FrontendCollaboration/WebContent/views/jobform.html
+++ b/FrontendCollaboration/WebContent/views/jobform.html
@@ -63,12 +63,35 @@ Enter Campany Name:
 List of All Jobs
 </pre>
 
-
-
-
-
-
+<div ng-init=getAllJobs()>
+<b>List Of Jobs</b>
 <table class="table table-striped">
+<thead>
+<tr><th>Job Title</th><th>Job Package</th><th>Company name</th><th>Skills Required</th><th>Job Location</th><th>Posted On </th><th>Action</th></tr>
+</thead>
+<tbody>
+<tr ng-repeat="job in jobs">
+
+<td>{{job.jobTitle}}</td>
+<td>{{job.salary}}</td>
+<td>{{job.companyname}}</td>
+<td>{{job.skillsRequired }}</td>
+<td>{{job.location}}</td>
+<td>{{job.postedOn | date :'dd/MM/yy hh:mm'}}</td>
+<td><button  ng-show="currentUser.role=='ADMIN'" class="btn btn-danger" ng-click="deleteJob(job.id)">Delete</button>
+</td>
+
+<tr>
+
+</tbody>
+
+</table>
+</div>
+
+
+
+
+<!-- <table class="table table-striped">
 <thead>
 <tr>
 <th>JobTitle</th>
@@ -81,6 +104,7 @@ List of All Jobs
 <td><a href="" ng-click="getJobDetails(job.id)">{{job.jobTitle}}</a></td>
 <td>{{job.postedOn | date: 'medium'}}</td>
 <td>{{job.skillsRequired}}</td>
+
 </tr>
 </tbody>
 </table>
@@ -97,7 +121,6 @@ job Skills Required:{{job.skillsRequired}}
 job Salary:{{job.salary}}
 job Location{{job.location}}
 job Company Name{{job.companyname}}
-job Posted On Date:{{job.postedOn}}
+job Posted On Date:{{job.postedOn}}  -->
 
-</pre>
-</div>
+</pre></div>
