job apply method is completed...

--- a/FrontendCollaboration/WebContent/views/Login.html
+++ b/FrontendCollaboration/WebContent/views/Login.html
@@ -3,19 +3,23 @@
 
 <head>
    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <link href="assets/mycss/Registration.css" rel="stylesheet">
+
   
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
- <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
- 
-    <script src="js/bootstrap.min.js"></script>
-  
-	<link href='https://fonts.googleapis.com/css?family=Passion+One' rel='stylesheet' type='text/css'>
-	<link href='https://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
-</head>
+	
+
+<link href="assets/mycss/Registration.css" rel="stylesheet">
+<style type="text/css">
+body
+{
+    background-image: url("image/admin.jpg");
+    background-repeat: no-repeat;
+    background-size: 100%; 
+    background-height: 100%;
+    
+    background-attachment: fixed;
+}	
+	
+</style></head>
 
 <body> 
 
@@ -24,7 +28,7 @@
 			<div class="row main">
 				<div class="panel-heading">
 	               <div class="panel-title text-center">
-	               		<h2 class="title">User Login</h2>
+				<h2  style="text-align: center; color: blue"><font face="Algerian"><h1><b><strong>User Login</strong></b></h1></font></h2>
 	               		<hr />
 	               	</div>
 	            </div> 
