--- a/FrontendCollaboration/WebContent/views/Demo.html
+++ b/FrontendCollaboration/WebContent/views/Demo.html
@@ -5,7 +5,7 @@
     <div class="row">
         <div class="[ col-xs-12 col-sm-offset-1 col-sm-5 ]">
             <div class="[ panel panel-default ] panel-google-plus">
-                <div class="dropdown">
+                <!-- <div class="dropdown">
                     <span class="dropdown-toggle" type="button" data-toggle="dropdown">
                         <span class="[ glyphicon glyphicon-chevron-down ]"></span>
                     </span>
@@ -16,15 +16,16 @@
                         <li role="presentation" class="divider"></li>
                         <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Separated link</a></li>
                     </ul>
-                </div>
-                <div class="panel-google-plus-tags">
+                </div> -->
+               <!--  <div class="panel-google-plus-tags">
                     <ul>
                         <li>#Millennials</li>
                         <li>#Generation</li>
                     </ul>
-                </div>
+                </div> -->
                 <div class="panel-heading">
-                    <img class="[ img-circle pull-left ]" src="https://lh3.googleusercontent.com/-CxXg7_7ylq4/AAAAAAAAAAI/AAAAAAAAAQ8/LhCIKQC5Aq4/s46-c-k-no/photo.jpg" alt="Mouse0270" />
+                    <img src="http://localhost:8084/RestController/getimage/{{user}}" height="60px" width="60px" 
+alt="Image Not Available" class="img-circle" alt="Mouse0270" />
                     <h3>Robert McIntosh</h3>
                     <h5><span>Shared publicly</span> - <span>Jun 27, 2014</span> </h5>
                 </div>
