--- a/FrontendCollaboration/WebContent/views/FriendList.html
+++ b/FrontendCollaboration/WebContent/views/FriendList.html
@@ -1,13 +1,52 @@
-<table class="table table-striped">
-<tbody>
-<tr ng-repeat="user in friends">
-<td>{{user}}</td>
-<td><img alt="Image Not Available" src="http://localhost:8084/RestController/getimage/{{user}}" 
-              height="40px" width="40px"">
-              
-</td>
-</tr>   
+<head>
+<meta charset="ISO-8859-1">
+<style type="text/css">
+body
+{
+    background-image: url("image/admin.jpg");
+    background-repeat: no-repeat;
+    background-size: 100%; 
+    background-attachment: fixed;
+}
+</style>
+</head>
 
-</tbody>
+<div>
+
+<h2 style="text-align: center; color: #0000b3"><font face="Algerian"><strong>View All Friends</strong></font></h2>
+
+<br>
+
+  <center><span ng-if="friends.length==0"><b><h2><strong>You have no Friends</strong></h2></b></span></center>
+
+
+<div class="container-fluid well" style="text-align: center; width="400px">
+
+
+<div  ng-repeat="user in friends"> 
+<div class="col-sm-11"  class="row" style="text-align: center; width="400px">
+ <div style=" box-shadow: 5px 5px 5px #000;" > 
+<table class="table table-hover table-responsive" >
+<tr>
+<td><img src="http://localhost:8084/RestController/getimage/{{user}}" height="60px" width="60px" 
+alt="Image Not Available" class="img-circle">   </td>     
+<td style="color: black"><h4><strong>UserName: </strong> {{user}}</h4></td>	
+
+<td ng-if="user.isOnline"><img src="image/isOnline.png" height="12px" width="12px"></td>
+<td ng-if="!user.isOnline"><img src="image/isOffline.png" height="10px" width="10px"></td>
+
+
+</tr> 
 
 </table>
+            
+ </div>        
+</div></div>
+
+<div data-ng-if="!friends">
+							You have no friends.				</div>
+							
+							
+							
+</div></div> 							
+
