--- a/FrontendCollaboration/WebContent/views/SuggestedFriendList.html
+++ b/FrontendCollaboration/WebContent/views/SuggestedFriendList.html
@@ -1,20 +1,42 @@
-<span ng-if="suggestedUsers.length==0"><b>No Any Suggestion Request</b></span>
+ <head>
+<meta charset="ISO-8859-1">
+<style type="text/css">
+body
+{
+    background-image: url("image/admin.jpg");
+    background-repeat: no-repeat;
+    background-size: 100%; 
+    background-attachment: fixed;
+}
+</style>
+</head>
+ 
+ 
+  <h2 style="text-align: center; color: #0000b3"><font face="Algerian"><h2><b><strong>Suggestion Friends</strong></b></h2></font></h2>
+  <br><br>
+  <div style=" box-shadow: 5px 5px 5px #000;" >
+  
+  <center><span ng-if="suggestedUsers.length==0"><b><h2><strong>No Any Suggestion Request</strong></h2></b></span></center>
+   
 <table class="table table-striped">
 <tbody>
+<div style=" box-shadow: 5px 5px 5px #000;" > 
 <tr ng-repeat="user in suggestedUsers">
-<td>{{user.firstname}}</td>
-<td>{{user.surname}}</td>
-<td>{{user.role}}</td>
-<td>{{user.email}}</td>
-<td ng-if="user.isOnline">Yes</td>
-<td ng-if="!user.isOnline">No</td>
+<td><img src="http://localhost:8084/RestController/getimage/{{user.username}}" height="80px" width="80px" 
+alt="Image Not Available" class="img-circle">   </td>     
+<td style="color: black"><h4><strong>{{user.email}} </strong> </h4></td>	
+<td style="color: black"><h4><strong>{{user.firstname}} {{user.surname}} </strong></h4></td>	
+<td style="color: black"><h5><strong>{{user.role}} </strong> </h5></td>	
 
-<td><img alt="Image not Available" src="http://localhost:8084/RestController/getimage/{{user.username}}" 
-              height="40px" width="40px">
+<td ng-if="user.isOnline" ><img src="image/isOnline.png" height="12px" width="12px"></td>
+<td ng-if="!user.isOnline" ><img src="image/isOffline.png" height="10px" width="10px"></td>
+
+
               
-<td><a class="btn btn-default" ng-click="sendFriendRequest(user.username)">Send Friend Request</a></td>
+<td><a class="btn btn-primary" ng-click="sendFriendRequest(user.username)">Send Friend Request</a></td>
 </tr>
 </tbody>
 
 
-</table>
+</table> 
+
