--- a/FrontendCollaboration/WebContent/views/blogDetails.html
+++ b/FrontendCollaboration/WebContent/views/blogDetails.html
@@ -2,42 +2,63 @@
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
 	 <link href="assets/mycss/blogpost.css" rel="stylesheet">
 
-<div class="row">
-<div>
-<div class="panel panel-default">
-<div class="pannel-heading">
-<div>{{blogPost.blogTitle}}</div>
-<span><strong>  Created By:</strong>{{blogPost.postedBy.username}}</span>
-<span><strong> on: </strong>{{blogPost.postedOn | date : 'MM/dd/yyyy HH:mm'}}</span>
 
-</div>
-<hr>
-<div class="panel-body">{{blogPost.blogContent}}</div>
+<head>
 
-</div>
-</div>
-</div>
+<link href="assets/mycss/blogpost.css" rel="stylesheet">
+<link href="assets/mycss/blogpost.js" rel="stylesheet">
+</head>
 
-
-{{blogPost.likes}} likes
-<a><span class="glyphicon glyphicon-thumbs-up" ng-class="isLiked?'liked':'default' " ng-click="updateLikes()"></span></a>
-
-<br>
-
-<b>Enter Blog Comments</b>
-<ul>
-<li ng-repeat="blogComment in blogComments" style="list: 'none' ">
-{{blogComment.commentText}}
-<strong>by</strong>{{blogComment.commentedBy.username}}
-<strong>on</strong>{{blogComment.commentedOn | date :'medium'}}
-</li>
-</ul>
-<br>
-
-<div>
-<textarea rows="3" cols="40" ng-model="blogComment.commentText" placeholder="Write a comment"></textarea>
-
-
-<button class="btn btn-primary" value="Post Comment" ng-click="addComment()">Post Comment</button> 
-</div>
+<div class="container">
+    <div class="row">
+        <div class="[ col-xs-12 col-sm-offset-1 col-sm-5 ]">
+            <div class="[ panel panel-default ] panel-google-plus">
+               
+                <div class="panel-heading">
+                    <img src="http://localhost:8084/RestController/getimage/{{blogPost.postedBy.username}}" height="80px" width="80px" 
+alt="Image Not Available" class="img-circle"  >
+                    <h3>{{blogPost.postedBy.username}}</h3>
+                    <h5><span>Shared publicly</span> on <span>{{blogPost.postedOn | date : 'MM/dd/yyyy HH:mm'}}</span> </h5>
+                </div>
+                <div class="panel-body">
+                    <p>{{blogPost.blogContent}}</p>
+                </div>
+                <div class="panel-footer">
+                    
+                    <textarea rows="1" cols="45" ng-model="blogComment.commentText" placeholder="Write a comment"></textarea><br>
+                  <br>
+                  {{blogPost.likes}} likes
+                   <a><span class="glyphicon glyphicon-thumbs-up" ng-class="isLiked?'liked':'default' " ng-click="updateLikes()"></span></a>
+                  
+                   
+                  <button type="submit" class=" btn btn-success"  value="Post Comment" ng-click="addComment()">Post comment</button>
+                        <button type="reset" class=" btn btn-primary ">Cancel</button>
+                        
+                   </div>
+                <br>
+             <!--  <div class=>
+                     <img src="http://localhost:8084/RestController/getimage/{{blog.username}}" height="60px" width="60px" 
+               alt="Image Not Available" class="img-circle"  > -->
+                    <div class="panel-body">
+                    <div ng-repeat="blogComment in blogComments" style="list: 'none' ">
+                    
+<img src="http://localhost:8084/RestController/getimage/{{blogComment.commentedBy.username}}" height="30px" width="30px" alt="Image Not Available" 
+class="img-circle"  >&nbsp; <h4 ><b style="text-; color: #0000b3">{{blogComment.commentedBy.username}}  </b>&nbsp;&nbsp; {{blogComment.commentText}}</h4>
+                      <h6>{{blogComment.commentedOn | date : 'MM/dd/yyyy HH:mm'}} </h6>
+          
+                        
+                    </div>
+                    <div class="clearfix"></div>
+                </div>
+            </div>
+        </div>
+        
+ 
+        
+        
+        
+   
+            </div>
+        </div>
+    </div>
 </div>
