--- a/FrontendCollaboration/WebContent/views/chat.html
+++ b/FrontendCollaboration/WebContent/views/chat.html
@@ -42,11 +42,16 @@
   			    <select class="form-control" id="to" name="to" ng-model="chat.to">
   			    	<option value="">Select Recipient</option>
               <option value="all">All Users</option>
-  			    	<option ng-repeat="user in users" value="{{user}}">{{capitalize(user)}}</option>
+  			    	<option ng-repeat="user in users" value="{{user}}"  >
+
+
+
+{{capitalize(user)}}</option>
   			    </select>
   			  </div>
   			  <div class="form-group">
-  			    <label for="message">Message {{currentUser.username}}</label>
+  			    <label for="message" ><img src="http://localhost:8084/RestController/getimage/{{currentUser.username}}" height="40px" width="40px" alt="Image Not Available" 
+class="img-circle"  > {{currentUser.username}}</label>
   			    <textarea class="form-control focus-on-click" name="message" placeholder="Message..." rows="3" ng-model="chat.message"></textarea>
   			  </div>
   			  <input type="submit" ng-focus="focus-on-click" name="send" class="btn btn-primary" value="Send.." />
@@ -60,7 +65,7 @@
    		<div class="col-md-12" id="chats" >
    			<div ng-repeat="chat in chats | reverse" class="chat {{chat.direction}}" ng-class="{'broadcast': chat.broadcast}">
           		<span class="from">
-		        	{{chat.from}}
+		        	{{chat.from}} 
 		       		<small ng-if="chat.broadcast">BROADCAST</small>
 		        </span>
 		        <span class="message">{{chat.message}}</span>
