--- a/FrontendCollaboration/WebContent/views/jobform.html
+++ b/FrontendCollaboration/WebContent/views/jobform.html
@@ -1,5 +1,180 @@
+<head>
+<meta charset="ISO-8859-1">
+<style type="text/css">
+body
+{
+    background-image: url("image/admin.jpg");
+    background-repeat: no-repeat;
+    background-size: 100%; 
+    background-attachment: fixed;
+}
+</style>
+</head>
+  
+
+
 <div class="container">
 <span style="color:red">{{error}}</span>
+
+<div class="row" data-ng-controller="JobController as ctrl">
+	<div class="col-sm-2"></div>
+		<div class="col-sm-9">
+			<form role="form" data-ng-submit="ctrl.addJobs()">
+				<h2  style="text-align: center; color: black"><font face="Algerian"><h2><b><strong>Add New Job</strong></b></h2></font></h2><br><br>
+					<table class="table table-hover" style="color:black; box-shadow: 5px 5px 5px #000;" >
+						<tr>  
+							<th>Job Title</th>
+							<td><input type="text" maxlength="255" placeholder="Enter Job Title" required="required" data-ng-model="job.jobTitle"/></td>
+						</tr>
+						<tr>
+							<th>Organization Name</th>
+							<td><input type="text" maxlength="200" placeholder="Enter Company Name" required="required" data-ng-model="job.companyname"/></td>
+						</tr>
+						<tr>
+							<th>Skills Required</th>
+							<td><input type="text" maxlength="200" placeholder="Enter the value skills Required" required="required" data-ng-model="job.skillsRequired"/></td>
+						</tr>
+						<tr>
+							<th>Location</th>
+							<td><input type="text" maxlength="200" placeholder="Enter Job Location" required="required" data-ng-model="job.location"/></td>
+						</tr>
+						<tr>
+							<th>Position Offered</th>
+							<td><input type="text" maxlength="200" placeholder="Enter Offered Position" required="required" data-ng-model="job.position"/></td>
+						</tr>
+						<tr>
+							<th>Package Offered</th>
+							<td><input type="text" maxlength="100" placeholder="Enter Package Offered" required="required" data-ng-model="job.salary"/></td>
+						</tr>
+						<tr>
+							<th>Qualification 10th</th>
+							<td><select data-ng-model='job.q_10' required="required">
+			                        <option value="NIL"></option>
+			                        <option value="50.0%">50.0%</option>
+			                        <option value="55.0%">55.0%</option>
+			                        <option value="60.0%">60.0%</option>
+			                        <option value="65.0%">65.0%</option>
+			                        <option value="70.0%">70.0%</option>
+			                        <option value="75.0%">75.0%</option>
+                    		</select></td>
+						</tr>
+						<tr>
+							<th>Qualification 12th</th>
+							<td><select data-ng-model='job.q_12' required="required">
+			                        <option value="NIL"></option>
+			                        <option value="50.0%">50.0%</option>
+			                        <option value="55.0%">55.0%</option>
+			                        <option value="60.0%">60.0%</option>
+			                        <option value="65.0%">65.0%</option>
+			                        <option value="70.0%">70.0%</option>
+			                        <option value="75.0%">75.0%</option>
+                    		</select></td>
+						</tr>
+						<tr>
+							<th>Qualification Graduation</th>
+							<td><select data-ng-model='job.q_ug' required="required">
+									<option value="NIL"></option>
+			                        <option value="50.0%">50.0%</option>
+			                        <option value="55.0%">55.0%</option>
+			                        <option value="60.0%">60.0%</option>
+			                        <option value="65.0%">65.0%</option>
+			                        <option value="70.0%">70.0%</option>
+			                        <option value="75.0%">75.0%</option>
+                    		</select></td>
+						</tr>
+						<tr>
+							<th>Vacancy Available</th>
+							<td><input type="text" maxlength="5" placeholder="Vacancies Available" required="required"  data-ng-model="job.vacancy"/></td>
+						</tr>
+						<tr>
+							<th>Description</th>
+							<td><textarea rows="2" cols="50" placeholder="Describe offered position here and Experience" required="required" data-ng-model="job.jobDescription"></textarea></td>
+						</tr>
+						
+					<tr>
+						
+				<td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+				<button type="submit" class="btn btn-primary btn-lg" value="Post Job" ng-click="addJob()">Post Job</button></td>
+				<td><button  type="reset" class="btn btn-danger btn-lg" >Reset Data</button></td>
+						</tr>
+					</table>
+			</form>
+		</div>
+		
+	</div>
+	</div>
+	
+<br>
+
+
+
+
+<pre>
+</pre>
+
+<div ng-init=getAllJobs()>
+<h2  style="text-align: center; color: black"><font face="Algerian"><h2><b><strong>Available Jobs</strong></b></h2></font></h2>
+
+<br><br>
+<div style="color:black; box-shadow: 5px 5px 5px #000;" >
+<center><span ng-if="jobs.length==0"><b><h2><strong>No Job Available here </strong></h2></b></span></center>
+
+<table class="table table-striped">
+<thead>
+<tr><th>Job Title</th><th>Job Package</th><th>Company name</th><th>Skills Required</th><th>Position</th><th>Vacancy</th><th>Job Location</th><th>Posted On </th><th>Action</th></tr>
+</thead>
+<tbody>
+<tr ng-repeat="job in jobs">
+
+<td>{{job.jobTitle}}</td>
+<td>{{job.salary}}</td>
+<td>{{job.companyname}}</td>
+<td>{{job.skillsRequired }}</td>
+<td>{{job.position}}</td>
+<td>{{job.vacancy}}</td>
+<td>{{job.location}}</td>
+
+<td>{{job.postedOn | date :'dd/MM/yy hh:mm'}}</td>
+<td><button  ng-show="currentUser.role=='ADMIN'" class="btn btn-danger" ng-click="deleteJob(job.id)">Delete</button>
+</td>
+
+<tr>
+
+</tbody>
+
+</table>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <div class="container">
+<span style="color:red">{{error}}</span>
+
+
+
+private char status;
+	
+
+
+	
+	private String q_10;
+	private String q_12;
+	private String q_ug;
+	position, vacancy
 
 
 <form>
@@ -91,7 +266,7 @@ List of All Jobs
 
 
 
-<!-- <table class="table table-striped">
+<table class="table table-striped">
 <thead>
 <tr>
 <th>JobTitle</th>
@@ -121,6 +296,6 @@ job Skills Required:{{job.skillsRequired}}
 job Salary:{{job.salary}}
 job Location{{job.location}}
 job Company Name{{job.companyname}}
-job Posted On Date:{{job.postedOn}}  -->
+job Posted On Date:{{job.postedOn}} 
 
-</pre></div>
+</pre></div> -->
