--- a/FrontendCollaboration/WebContent/views/joblist.html
+++ b/FrontendCollaboration/WebContent/views/joblist.html
@@ -1,6 +1,35 @@
-<center><input type="text" ng-model="searchTxt"><span class="glyphicon glyphicon-search"></span>Search Jobs</center>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="ISO-8859-1">
+
+<style type="text/css">
+body
+{
+    background-image: url("image/admin.jpg");
+    background-repeat: no-repeat;
+    background-size: 100%; 
+    background-height: 100%;
+    
+    background-attachment: fixed;
+}	
+	
+</style>
+
+
+</head>
+<body>
+<h1 style="text-align: center; color: #0000b3"><font face="Algerian"><strong>Available Jobs</strong></font></h1><br><br>
+	<div class="container" >
+		<div class="row" data-ng-repeat="job in jobs">
+		<center><input type="text" ng-model="searchTxt"><span class="glyphicon glyphicon-search"></span>Search Jobs</center><br>
+		
+			<div class="col-sm-12">
+				<table class="table" style="box-shadow: 5px 5px 5px #111; font: bold; color: black">
+					<tr style="font: bold;">
+<!-- <center><input type="text" ng-model="searchTxt"><span class="glyphicon glyphicon-search"></span>Search Jobs</center>
 <br><hr>
-<table class="table table-striped">
+<table class="table table-striped"> -->
 <thead>
 <tr>
 <th>JobTitle</th>
@@ -10,26 +39,61 @@
 </thead>
 <tbody>
 <tr ng-repeat="job in jobs | filter:searchTxt">
-<td><a href="" ng-click="getJobDetails(job.id)">{{job.jobTitle}}</a></td>
+
+<td><strong><b><h3><a href="" ng-click="getJobDetails(job.id)">{{job.jobTitle}}</a></h3></b></strong></td>
 <td>{{job.postedOn | date: 'medium'}}</td>
 <td>{{job.skillsRequired}}</td>
+
 </tr>
 </tbody>
-</table>
+</table></div></div></div>
 
 
 <div ng-show="showJobDetails">
 
-Job Details
 
-<pre>
-Job Title:{{job.jobTitle}}
+
+<pre></pre>
+<h1 style="text-align: center; color: #0000b3"><font face="Algerian"><strong>Job Detail</strong></font></h1>
+	<div class="container" >
+	<div class="col-sm-12">
+<table class="table" style="box-shadow: 5px 5px 5px #111; font: bold; color: black">
+					<tr style="font: bold;">
+						<td colspan="3"><h3><strong>{{job.title}}</strong></h3></td>
+					</tr>
+					<tr style="font: bold;">
+						<td>Organization: {{job.companyname}}</td>
+						<td>Position: {{job.position}}</td>
+						<td>Location: {{job.location}}</td>
+					</tr>
+					<tr style="font: bold;">
+						<td>Package: {{job.salary}}</td>
+						<td>Job Status: OPEN</td>
+						<td>Vacancies: {{job.vacancy}}</td>
+						<td></td>
+					</tr>
+					<tr style="font: bold;">
+						<td>Minimum 10th: {{job.q_10}}</td>
+						<td>Minimum 12th: {{job.q_12}}</td>
+						<td>Minimum UG %: {{job.q_ug}}</td>
+					</tr>					
+					<tr style="font: bold;">
+						<td colspan="3">Description: {{job.jobDescription}}</td>
+					</tr>
+				
+					<tr>
+					
+<!-- Job Title:{{job.jobTitle}}
 job Description:{{job.jobDescription}}
 job Skills Required:{{job.skillsRequired}}
 job Salary:{{job.salary}}
 job Location{{job.location}}
 job Company Name{{job.companyname}}
-job Posted On Date:{{job.postedOn}}
+job Posted On Date:{{job.postedOn}}  -->
 
-</pre>
-</div>
+<td colspan="3"><p style="text-align: right"><button type="submit" class="btn btn-primary" ng-click="applyNewJob()">Apply</button></td>
+</tr></table>
+
+</div></div></div>
+
+</body></html>
