--- a/FrontendCollaboration/WebContent/views/myProfile.html
+++ b/FrontendCollaboration/WebContent/views/myProfile.html
@@ -24,10 +24,10 @@ body
 			
 				<ul class="nav nav-tabs nav-justified">
  					 <li role="presentation"><a data-toggle="tab" href="#myprofile">My Profile</a></li>
- 					 <li role="presentation"><a data-toggle="tab" href="#friendslist">My Friends</a></li>
+ 					<!--  <li role="presentation"><a data-toggle="tab" href="#friendslist">My Friends</a></li>
 					 <li role="presentation"><a data-toggle="tab" href="#pendingrequests">Pending Requests</a></li>
 					 <li role="presentation"><a data-toggle="tab" href="#getsuggestedusers">Sent Requests</a></li>
-					 <li role="presentation"><a data-toggle="tab" href="#getalljobs">Applied Jobs</a></li>
+					 <li role="presentation"><a data-toggle="tab" href="#getalljobs">Applied Jobs</a></li> -->
 				</ul>
 								
 				 <div class="tab-content">
