--- a/FrontendCollaboration/WebContent/views/blogPostForm.html
+++ b/FrontendCollaboration/WebContent/views/blogPostForm.html
@@ -1,3 +1,27 @@
+<head>
+   <meta name="viewport" content="width=device-width, initial-scale=1"/>
+
+  
+	
+
+<link href="assets/mycss/Registration.css" rel="stylesheet">
+<style type="text/css">
+body
+{
+    background-image: url("image/admin.jpg");
+    background-repeat: no-repeat;
+    background-size: 100%; 
+    background-height: 100%;
+    
+    background-attachment: fixed;
+}	
+	
+</style></head>
+
+
+<h2  style="text-align: center; color: blue"><font face="Algerian"><h1><b><strong>Blog</strong></b></h1></font></h2>
+<br><br>
+
 <div class="container">
 
 
