--- a/FrontendCollaboration/WebContent/views/joblist.html
+++ b/FrontendCollaboration/WebContent/views/joblist.html
@@ -15,45 +15,60 @@ body
 }	
 	
 </style>
-
+<!-- <center><input type="text" ng-model="searchTxt"><span class="glyphicon glyphicon-search"></span>Search Jobs</center><br>
+<tr style="font: bold;"> -->
 
 </head>
 <body>
-<h1 style="text-align: center; color: #0000b3"><font face="Algerian"><strong>Available Jobs</strong></font></h1><br><br>
-	<div class="container" >
-		<div class="row" data-ng-repeat="job in jobs">
-		<center><input type="text" ng-model="searchTxt"><span class="glyphicon glyphicon-search"></span>Search Jobs</center><br>
-		
-			<div class="col-sm-12">
-				<table class="table" style="box-shadow: 5px 5px 5px #111; font: bold; color: black">
-					<tr style="font: bold;">
-<!-- <center><input type="text" ng-model="searchTxt"><span class="glyphicon glyphicon-search"></span>Search Jobs</center>
-<br><hr>
-<table class="table table-striped"> -->
+
+<div>
+<div style="color:black; box-shadow: 5px 5px 5px #000;" >
+<center><span ng-if="jobs.length==0"><b><h2><strong>No Job Available here </strong></h2></b></span></center>
+</div>
+
+<div ng-init=getAllJobs() ng-if="!jobs">
+<h1 ng-if="!jobs"  style="text-align: center; color: #0000b3"><font face="Algerian"><b><strong>Available Jobs</strong></b></font></h1>
+<br><br>
+
+
+<center><input type="text" ng-model="searchTxt"><span class="glyphicon glyphicon-search"></span>Search Jobs</center><br>
+
+
+
+<!-- <div style="color:black; box-shadow: 5px 5px 5px #000;" > -->
+
+
+<div class="container" >
+<div class="col-sm-12">
+
+<table style="box-shadow: 5px 5px 5px #111; font: bold; color: black" ng-if="!jobs">
 <thead>
-<tr>
-<th>JobTitle</th>
-<th>PostedOn</th>
-<th>SkillsRequired</th>
-</tr>
+<tr  style="font: bold;">
+<th>Job Title</th><th>Skills Required</th><th>Posted On </th></tr>
 </thead>
 <tbody>
 <tr ng-repeat="job in jobs | filter:searchTxt">
 
 <td><strong><b><h3><a href="" ng-click="getJobDetails(job.id)">{{job.jobTitle}}</a></h3></b></strong></td>
-<td>{{job.postedOn | date: 'medium'}}</td>
-<td>{{job.skillsRequired}}</td>
 
-</tr>
+<td>{{job.skillsRequired }}</td>
+<td>{{job.postedOn | date :'dd/MM/yy hh:mm'}}</td>
+
+<tr>
 </tbody>
-</table></div></div></div>
+</table></div></div>
+</div></div>
 
 
+
+
+
+
+
+<!-- <pre></pre> -->
+
+<br>
 <div ng-show="showJobDetails">
-
-
-
-<pre></pre>
 <h1 style="text-align: center; color: #0000b3"><font face="Algerian"><strong>Job Detail</strong></font></h1>
 	<div class="container" >
 	<div class="col-sm-12">
