--- a/FrontendCollaboration/WebContent/views/Login.html
+++ b/FrontendCollaboration/WebContent/views/Login.html
@@ -11,7 +11,7 @@
 <style type="text/css">
 body
 {
-    background-image: url("image/admin.jpg");
+    background-image: url("image/thr.jpg");
     background-repeat: no-repeat;
     background-size: 100%; 
     background-height: 100%;
