--- a/FrontendCollaboration/WebContent/views/jobform.html
+++ b/FrontendCollaboration/WebContent/views/jobform.html
@@ -3,7 +3,7 @@
 <style type="text/css">
 body
 {
-    background-image: url("image/admin.jpg");
+    background-image: url("image/thr.jpg");
     background-repeat: no-repeat;
     background-size: 100%; 
     background-attachment: fixed;
@@ -19,7 +19,7 @@ body
 <div class="row" data-ng-controller="JobController as ctrl">
 	<div class="col-sm-2"></div>
 		<div class="col-sm-9">
-	<h2  style="text-align: center; color: black"><font face="Algerian"><h2><b><strong>Add New Job</strong></b></h2></font></h2><br><br>
+	<h2  style="text-align: center; color: blue"><font face="Algerian"><h2><b><strong>Add New Job</strong></b></h2></font></h2><br><br>
 		
 		
 		<span style="color:red">{{error}}</span>
@@ -118,7 +118,7 @@ body
 
 <div>
 <div ng-init=getAllJobs()>
-<h2  style="text-align: center; color: black"><font face="Algerian"><h2><b><strong>Available Jobs</strong></b></h2></font></h2>
+<h2  style="text-align: center; color: blue"><font face="Algerian"><h2><b><strong>Available Jobs</strong></b></h2></font></h2>
 
 <br><br>
 <div style="color:black; box-shadow: 5px 5px 5px #000;" >
