--- a/FrontendCollaboration/WebContent/views/Home.html
+++ b/FrontendCollaboration/WebContent/views/Home.html
@@ -13,7 +13,7 @@
 <style type="text/css">
 body
 {
-    background-image: url("image/admin.jpg");
+    background-image: url("image/thr.jpg");
     background-repeat: no-repeat;
     background-size: 100%; 
     background-attachment: fixed;
