--- a/FrontendCollaboration/WebContent/views/PendingFriendRequest.html
+++ b/FrontendCollaboration/WebContent/views/PendingFriendRequest.html
@@ -28,7 +28,7 @@ request.status=P
 <style type="text/css">
 body
 {
-    background-image: url("image/admin.jpg");
+    background-image: url("image/thr.jpg");
     background-repeat: no-repeat;
     background-size: 100%; 
     background-attachment: fixed;
