--- a/FrontendCollaboration/WebContent/views/myProfile.html
+++ b/FrontendCollaboration/WebContent/views/myProfile.html
@@ -5,7 +5,7 @@
 <style type="text/css">
 body
 {
-    background-image: url("images/white.jpg");
+    background-image: url("images/thr.jpg");
     background-repeat: no-repeat;
     background-size: 100%; 
     background-attachment: fixed;
@@ -23,11 +23,9 @@ body
 			<div class="col-sm-8">
 			
 				<ul class="nav nav-tabs nav-justified">
- 					 <li role="presentation"><a data-toggle="tab" href="#myprofile">My Profile</a></li>
- 					<!--  <li role="presentation"><a data-toggle="tab" href="#friendslist">My Friends</a></li>
-					 <li role="presentation"><a data-toggle="tab" href="#pendingrequests">Pending Requests</a></li>
-					 <li role="presentation"><a data-toggle="tab" href="#getsuggestedusers">Sent Requests</a></li>
-					 <li role="presentation"><a data-toggle="tab" href="#getalljobs">Applied Jobs</a></li> -->
+ 					 <li role="presentation"><a data-toggle="tab" href="#myprofile"></a></li>
+ 					<!--  <li role="presentation"><a data-toggle="tab" href="#xyz">xyz</a></li>  -->
+				
 				</ul>
 								
 				 <div class="tab-content">
