--- a/FrontendCollaboration/WebContent/views/FriendList.html
+++ b/FrontendCollaboration/WebContent/views/FriendList.html
@@ -32,8 +32,8 @@ body
 alt="Image Not Available" class="img-circle">   </td>     
 <td style="color: black"><h4><strong>UserName: </strong> {{user}}</h4></td>	
 
-<td ng-if="user.isOnline"><img src="image/isOnline.png" height="12px" width="12px"></td>
-<td ng-if="!user.isOnline"><img src="image/isOffline.png" height="10px" width="10px"></td>
+<!-- <td ng-if="user.isOnline"><img src="image/isOnline.png" height="12px" width="12px"></td>
+<td ng-if="!user.isOnline"><img src="image/isOffline.png" height="10px" width="10px"></td> -->
 
 
 </tr> 
