--- a/FrontendCollaboration/WebContent/views/Home.html
+++ b/FrontendCollaboration/WebContent/views/Home.html
@@ -10,7 +10,7 @@
 	<link href='https://fonts.googleapis.com/css?family=Oxygen' rel='stylesheet' type='text/css'>
 	
 	
-<style type="text/css">
+<!-- <style type="text/css">
 body
 {
     background-image: url("image/thr.jpg");
@@ -18,12 +18,33 @@ body
     background-size: 100%; 
     background-attachment: fixed;
 }
-</style>	
+</style> -->	
 </head>
 
 <body>
 
-<p>HOME PAGE</p>
+<div class="container">
+			<div class="row main">
+				<div class="panel-heading">
+	               <div class="panel-title text-center">
+				<h2  style="text-align: center; color: blue"><font face="Algerian"><h1><b><strong>About Us</strong></b></h1></font></h2>
+	               <div	style="color:black; box-shadow: 5px 5px 5px #000;" ></div>
+	               		<hr />
+	               	</div>
+	            </div> 
+				<div class="main-login main-center">
 
+<center>
+<img alt="" src="image/img.jpg" height="400px",width="400px">
+<br><br>
+<h4><div class="std"><p>The <strong>Collaboration</strong> is the process of two or more people or organizations working together to realize or achieve something successfully.
+ Collaboration is very similar to, but more closely aligned than, cooperation.
+ Teams that work collaboratively can obtain greater resources, 
+ recognition and reward when facing competition for finite resources.
+ it is specifically aim to increase the success of teams as they engage in collaborative problem solving.</p></div>
+ </h4></p>
+</center>
+
+</div></div></div>
 </body>
 </html>
