--- a/FrontendCollaboration/WebContent/views/jobform.html
+++ b/FrontendCollaboration/WebContent/views/jobform.html
@@ -16,7 +16,7 @@ body
 <div class="container">
 
 
-<div class="row" data-ng-controller="JobController as ctrl">
+<div class="row">
 	<div class="col-sm-2"></div>
 		<div class="col-sm-9">
 	<h2  style="text-align: center; color: blue"><font face="Algerian"><h2><b><strong>Add New Job</strong></b></h2></font></h2><br><br>
